--- a/LspLauncher/build.gradle
+++ b/LspLauncher/build.gradle
@@ -3,6 +3,8 @@ plugins {
     alias(libs.plugins.kotlin.android)
 }
 
+apply from: "testks-sign.gradle"
+
 android {
     namespace 'com.magicianguo.lsplauncher'
     compileSdk 35
@@ -15,13 +17,6 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-    }
-
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-        }
     }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_11
